# cecvol

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  flake.nix  pi@raspberrypi
.devcontainer/: Dockerfile  devcontainer.json
debian/: cecvol.service
fitbit-app/: package.json
fitbit-app/app/: index.js
fitbit-app/companion/: index.js
fitbit-app/resources/: index.view  styles.css
src/: auth.html  auth.rs  cec.rs  index.html  lgip.rs  lib.rs  main.rs  manifest.json  tv.rs  wol.rs
src/action/: devices.rs
src/auth/: jwt.rs
src/cec/: enums.rs  noop.rs  vchi.rs  vchiq_ioctl.rs
wearos/: settings.gradle.kts
wearos/app/: build.gradle.kts
wearos/app/src/main/: AndroidManifest.xml
wearos/app/src/main/java/com/stevenandbonnie/cecvol/presentation/: MainActivity.kt
wearos/app/src/main/java/com/stevenandbonnie/cecvol/presentation/theme/: Theme.kt
wearos/app/src/main/res/drawable/: splash_icon.xml
wearos/app/src/main/res/values/: strings.xml
wearos/gradle/wrapper/: gradle-wrapper.properties
