[package]
name = "cecvol"
version = "0.1.1"
authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Allow external control of CEC commands to TV"
edition = "2021"

[dependencies]
actix = "0.10"
actix-web = "3.1"
actix-http = "2.0"
base64 = "0.13"
log = "0.4"
lazy_static = "1.4"
libc = "0.2"
nix = "0.18"
num_enum = "0.5"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
sha2 = "0.9"
env_logger = "0.7"
thiserror = "1.0"
tokio= { version="0.2", features=["time"] }
clap = { version = "4.0.15", features = ["derive"] }

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { }
