[package]
name = "cecvol"
version = "0.1.3"
authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Allow external control of CEC commands to TV"
edition = "2021"

[dependencies]
axum = "0.5.16"
base64 = "0.13.0"
clap = { version = "4.0.15", features = ["derive"] }
cookie = "0.16.1"
env_logger = "0.9.1"
lazy_static = "1.4.0"
libc = "0.2.135"
log = "0.4.17"
nix = "0.25.0"
num_enum = "0.5.7"
percent-encoding = "2.2.0"
prometheus = { version = "0.13.2", features = ["process"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha2 = "0.10.6"
thiserror = "1.0.37"
time = "0.3.15"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { }
